# satellite-pipeline

./: .gitignore  main.py  notes.md  prompt.md  pyproject.toml  requirements.txt  verify_data_stats.py  visualize.py
data/pipeline/: dataset.py  ingest.py  train.py  transform.py
data/tiff/train_labels/: 10228795_15.tif  10378660_15.tif  10678810_15.tif  10678825_15.tif  10678870_15.tif  10678885_15.tif  10828855_15.tif  10828900_15.tif  10978645_15.tif  10978945_15.tif  11128930_15.tif  11128945_15.tif  11278645_15.tif  11278660_15.tif  11278690_15.tif  11278705_15.tif  11278735_15.tif  11278750_15.tif  11278765_15.tif  11278780_15.tif  11278795_15.tif  11278810_15.tif  11278825_15.tif  11278885_15.tif  11278915_15.tif  11278930_15.tif  11428720_15.tif  11428750_15.tif  11428825_15.tif  11428855_15.tif  11428930_15.tif  11428945_15.tif  11578675_15.tif  11578690_15.tif  11578705_15.tif  11578750_15.tif  11578765_15.tif  11578795_15.tif  11578810_15.tif  11578825_15.tif  (+462 more)
data/tiff/val_labels/: 18028945_15.tif  22829035_15.tif  22978990_15.tif  24179245_15.tif  25229230_15.tif
dataset/roads/train_labels/: 10378795_15.tif  10528795_15.tif  10678795_15.tif  (+499 more)
docs/: mentor_update.md
etc/: getdataset.py  notes.md
frontend/: app.js  build_report.py  index.html  report-data.js  serve.py  styles.css
pipeline/: .gitignore  dataset.py  ingest.py  train.py  transform.py
src/change_detection/: predict.py  train.py
src/segmentation/: predict.py  train.py
src/shared/: metrics.py  models.py  visualize.py
src/training/: augmentation.py  dataset.py  model.py
(+7 files in other folders)
