[project]
name = "geosynth"
version = "0.1.0"
description = "Small remote-sensing training playground for segmentation and change detection."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "opencv-python>=4.12.0.88",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.11.0",
]
